[project]
name = "tiny-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.5",
    "pydantic[email]>=2.12.5",
    "sqlalchemy[mypy]>=2.0.48",
    "types-aiofiles>=25.1.0.20251011",
]

[dependency-groups]
lint = [
    "bandit>=1.9.4",
    "black>=26.3.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
tests = [
    "coverage>=7.13.4",
    "coveralls>=4.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.9.25",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
  "E501",
  "B008",
    "F401"
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["your_package"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"test_*.py"     = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


# ──────────────────────────────────────────────
# Mypy
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_calls = true
show_error_codes = true
show_column_numbers = true
pretty = true
warn_unreachable = true
warn_return_any = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
warn_unused_ignores = false
disallow_subclassing_any = false
disallow_untyped_defs = true
warn_redundant_casts=true

[[tool.mypy.overrides]]
module = "*"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofile.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
